<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_nama"
        android:text="Waktu"
        android:textColor="#000"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_wkt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pilih Waktu"
        android:layout_margin="8dp"
        android:textColor="#fff"
        android:background="@drawable/bg_penanggulangan"/>

</LinearLayout>